--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==2.1.7
 django-crispy-forms==1.7.2
 django-extensions==2.1.6
 django-filter==2.1.0
+django-heroku==0.3.1
 djangorestframework==3.9.1
 djangorestframework-firebase==0.2.0
 drf-firebase-auth==0.0.4
