--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ oauth2client==3.0.0
 Pillow==5.4.1
 protobuf==3.7.0rc2
 psycopg2==2.7.7
+psycopg2-binary==2.7.7
 pyasn1==0.4.5
 pyasn1-modules==0.2.4
 pycryptodome==3.7.3
