--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+atomicwrites==1.3.0
+attrs==18.2.0
 CacheControl==0.12.5
 cachetools==3.1.0
 certifi==2018.11.29
 chardet==3.0.4
+colorama==0.4.1
 dj-database-url==0.5.0
 Django==2.1.7
 django-crispy-forms==1.7.2
@@ -26,15 +29,19 @@ httplib2==0.12.1
 idna==2.8
 jws==0.1.3
 Markdown==3.0.1
+more-itertools==6.0.0
 msgpack==0.6.1
 oauth2client==3.0.0
 Pillow==5.4.1
+pluggy==0.9.0
 protobuf==3.7.0rc2
 psycopg2==2.7.7
 psycopg2-binary==2.7.7
+py==1.8.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.4
 pycryptodome==3.7.3
+pytest==4.3.0
 python-firebase==1.2
 python-jwt==2.0.1
 pytz==2018.9
