--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ chardet==3.0.4
 colorama==0.4.1
 dj-database-url==0.5.0
 Django==2.1.7
+django-cors-headers==2.5.0
 django-crispy-forms==1.7.2
 django-extensions==2.1.6
 django-filter==2.1.0
